# signal-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.ps1  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  sync-upstream.yml
docs/: book.toml
docs/implementation_plans/: issue_401_type_safe_action_menu.md
docs/plans/: 2026-03-01-rstest-refactoring-design.md  2026-03-01-rstest-refactoring.md
docs/src/: SUMMARY.md  changelog.md  introduction.md
docs/src/dev-guide/: architecture.md  ci-releases.md  contributing.md  data-flow.md  database.md  modules.md  protocol.md  roadmap.md  testing.md
docs/src/user-guide/: commands.md  configuration.md  faq.md  features.md  getting-started.md  installation.md  keybindings.md  troubleshooting.md
docs/superpowers/plans/: 2026-03-24-vim-keybinding-bugs.md  2026-04-04-sync-viewport-stabilization.md  2026-04-19-repo-hygiene.md
docs/superpowers/specs/: 2026-03-24-vim-keybinding-bugs-design.md  2026-04-04-sync-viewport-stabilization-design.md  2026-04-19-repo-hygiene-design.md
docs/theme/css/: irc-theme.css
scripts/: check-app-field-count.sh
src/: app.rs  autocomplete.rs  config.rs  conversation_store.rs  db.rs  debug_log.rs  fs_migrate.rs  image_render.rs  input.rs  keybindings.rs  lib.rs  link.rs  main.rs  mute.rs  settings_profile.rs  setup.rs  theme.rs  ui.rs
src/domain/: action_menu.rs  contacts_overlay.rs  emoji_picker.rs  file_picker.rs  forward_overlay.rs  keybindings_overlay.rs  mod.rs  mouse.rs  overlays.rs  pin_duration_overlay.rs  poll_vote_overlay.rs  profile_overlay.rs  reaction.rs  search.rs  settings_profile_overlay.rs  theme_picker.rs  verify_overlay.rs
src/handlers/: input.rs  mod.rs
src/signal/: client.rs  types.rs
src/snapshots/: siggy__ui__snapshot_tests__about_overlay.snap  siggy__ui__snapshot_tests__help_overlay.snap  siggy__ui__snapshot_tests__insert_mode.snap  siggy__ui__snapshot_tests__message_request.snap  siggy__ui__snapshot_tests__no_active_conversation.snap  siggy__ui__snapshot_tests__pinned_message.snap  siggy__ui__snapshot_tests__settings_overlay.snap
src/ui/: autocomplete.rs  chat_pane.rs  links.rs  mod.rs  sidebar.rs  welcome.rs
src/ui/overlays/: action_menu.rs  customize.rs  group_menu.rs  help.rs  keybindings.rs  mod.rs  pin_duration.rs  poll_vote.rs  search.rs  settings.rs  settings_profile.rs  theme_picker.rs
src/ui/snapshots/: siggy__ui__snapshot_tests__action_menu_overlay.snap  siggy__ui__snapshot_tests__contacts_overlay.snap  siggy__ui__snapshot_tests__disappearing_messages.snap  siggy__ui__snapshot_tests__emoji_picker_overlay.snap  siggy__ui__snapshot_tests__empty_conversation.snap  siggy__ui__snapshot_tests__forward_overlay.snap  siggy__ui__snapshot_tests__narrow_terminal.snap  siggy__ui__snapshot_tests__normal_mode.snap  (+7 more)
