[package]
name = "signal-tui"
version = "0.3.3"
edition = "2021"
license = "GPL-3.0-only"
description = "Terminal-based Signal messenger client with vim keybindings"
repository = "https://github.com/johnsideserf/signal-tui"
keywords = ["signal", "tui", "terminal", "messenger", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
arboard = "3"
